# c-game

./: .gitignore  CMakeLists.txt  README.md  makefile
debug/: prog
include/: Components.hpp  ECS.hpp  Game.hpp  GameInfo.hpp  GameObject.hpp  Map.hpp  RenderManager.h  TextureManager.hpp
include/ECS/: ECS.hpp  PositionComponent.hpp  SpriteComponent.hpp
resource/: 2111.w032.n003.215B.p1.pngZone.Identifier
src/: Game.cpp  Map.cpp  RenderManager.cpp  TextureManager.cpp  main.cpp
